<resources>
    <string name="app_name">App1_BMI</string>

    <string name="bmi">BMI</string>
    <string name="mass">Mass:</string>
    <string name="height">Height:</string>
    <string name="button_count">COUNT</string>
    <string name="button_save">Save your BMI</string>
    <string name="toolbar">BMI counter</string>
    <string name="author_toolbar">BMI counter - author info</string>

    <string name="kg">kg</string>
    <string name="m">m</string>
...
